--- a/style.css
+++ b/style.css
@@ -445,7 +445,7 @@ div#sea {
   }
 }
 div.mensagem{
-    margin: auto;
+    margin: 80px auto;
     width: 400px;
     color: white;
     text-align: justify;
